# grayboy

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README  README.md  TODO.txt  cartridge.h  cpu.cc  cpu.h  curse.h  debugger.cc  instruction_utils.h  instructions.cc  instructions.h  instructions_16bit.cc  instructions_16bit.h  instructions_8bit.cc  instructions_8bit.h  main.cc  memory.h  notes.txt  registers.h
.github/workflows/: cmake.yml  docker-image.yml
src/: CMakeLists.txt  cartridge.h  cpu.cc  cpu.h  curse.h  debugger.cc  display.h  emulator.h  fps.h  instruction_utils.h  instructions.cc  instructions.h  instructions_16bit.cc  instructions_8bit.cc  joypad.h  main.cc  memory.h  registers.h  timer.h
tests/: CMakeLists.txt  cpu_16bit_instruction_tests.cc  cpu_arithmetic_tests.cc  cpu_bit_operation_tests.cc  cpu_jumpcall_tests.cc  cpu_ld_tests.cc  cpu_misc_tests.cc  cpu_utils_tests.cc  memory_tests.cc  registers_snapshot_tests.cc  registers_tests.cc  test_utils.h
tests-blargg/: CMakeLists.txt  tests-blargg.cc
